# OpenArmProj

./: .gitignore  README.md  pyproject.toml
src/openarm_data_collection/: __init__.py  api.py  cameras.py  can.py  cli.py  models.py  recorder.py  storage.py  sync.py
src/openarm_data_collection.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openarm_data_collection/static/: app.js  index.html  styles.css
tests/: test_api_storage.py  test_cli.py  test_recorder.py  test_sync.py
