[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openarm-data-collection"
version = "0.1.0"
description = "OpenArm 2.0 data collection pipeline take-home project"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "h5py>=3.10",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[project.scripts]
openarm-collector = "openarm_data_collection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openarm_data_collection = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
